[package]
name = "BVC"
version = "0.1.9"
edition = "2021"
authors = ["Michele Gementi", "Matteo Mariotti"]
description = "Bolsa de valores de Caracas Market Implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unitn_market_2022 = {version = "1.0.9", registry = "kellnr"}
rand = "0.7.3"
chrono = "0.4.23"